# rag_chat_bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  logging_config.py  pyproject.toml  requirements.txt
app/: main.py
app/config/: settings.py
app/core/: code_executor.py  document_processor.py  interfaz.py  memory_manager.py  query_engine.py
app_rag_chat_bot/: main.py
app_rag_chat_bot/config/: settings.py
app_rag_chat_bot/core/: code_executor.py  document_processor.py
app_rag_chat_bot/utils/: logging_config.py  security.py
